--- a/lesson 10/external style-2.css
+++ b/lesson 10/external style-2.css
@@ -5,7 +5,7 @@ body{
 }
 
 h1{
-    color: mediumaquamarine;
+    color: gold;
 }
 
 /*child selector*/
@@ -15,7 +15,7 @@ ul > li{
 
 /*:hover pseudo-class*/
 ul li:hover{
-    color: yellow;
+    color: darkorange;
 }
 
 /*nth-child(n) pseudo-class*/
@@ -30,7 +30,7 @@ ul li::before{
 
 /*sibling selector*/
 h1, p{
-    background-color: lightcoral;
+    background-color: dodgerblue;
 }
 
 /*attribute selector*/
